stuf/src/p2/tests/t020.err
Semantic error on line 2: Variable 'a' previously declared.
Semantic error on line 3: Variable 'a' previously declared.
