stuf/src/p2/tests/t020.gpl
int a;
double a;
string a;
